fix all version incompatibilities